product_docs/docs/eprs/6.2/08_xdb_cli/03_xdb_cli_commands/18_adding_tables_to_publication.mdx
---
title: "Adding Tables to a Publication (addtablesintopub)"
---

<div id="adding_tables_to_publication" class="registered_link"></div>

The `addtablesintopub` command adds tables or views into an existing publication.

Synopsis

```text
-addtablesintopub pubname
  -repsvrfile pubsvrfile
[ -tables schema_t1.table_1 [ schema_t2.table_2 ] ...]
[ -views schema_v1.view_1 [ schema_v2.view_2 ] ...]
[ -tablesfilterclause
    "ordinal_t1:filtername_t1:filterclause_t1"
  [ "ordinal_t2:filtername_t2:filterclause_t2" ] ...]
[ -viewsfilterclause
    "ordinal_v1:filtername_v1:filterclause_v1"
  [ "ordinal_v2:filtername_v2:filterclause_v2" ] ...]
[ -conflictresolution
    ordinal_t1:{ E | L | N | M | C:customhandler_t1 }
  [ ordinal_t2:{ E | L } N | M | C:customhandler_t2 } ] ...]
[ -standbyconflictresolution
    ordinal_t1:{ E | L | N | M | C:customhandler_t1 }
  [ ordinal_t2:{ E | L } N | M | C:customhandler_t2 } ] ...]
[ -repgrouptype { m | s } ]
```

The `addtablesintopub` command updates an existing publication identified by pubname. The views parameter is applicable only for a snapshot-only publication and is ignored if the publication is not defined as snapshot-only. See [Adding Tables to a Publication](../../07_common_operations/06_managing_publication/03_updating_pub/#add_tables_to_pub) for additional information on adding tables to a publication.

!!! Note
    The schema names, table names, and view names that you supply as values for the tables and views parameters are case-sensitive. Unless quoted identifiers were used to build the database objects, Oracle names must be entered using uppercase letters (for example, `EDB.DEPT`), and Advanced Server names must be entered in lowercase letters (for example `edb.dept`). See [Quoted Identifiers and Default Case Translation](../../10_appendix/04_miscellaneous_xdb_processing_topics/05_quoted_identifiers/#quoted_identifiers) for additional information on quoted identifiers and case translation.

Parameters

`pubname`

> The name of the publication to which tables or views are to be added.

`pubsvrfile`

> The file containing the publication server login information.

`schema_tn`

> The name of the schema containing the nth table of the tables parameter list. This value is case-sensitive.

`table_n`

> The name of the nth table in the tables parameter list. This value is case-sensitive.

`schema_vn`

> **For SMR only:** The name of the schema containing the nth view of the views parameter list. This value is case-sensitive.

`view_n`

> **For SMR only:** The name of the nth view in the views parameter list. This value is case-sensitive.

`ordinal_tn`

> The ordinal number (that is, the position in the list counting from left to right starting with 1) of a table in the tables parameter list to which an attribute is to be applied.

`filtername_tn`

> The filter name to be assigned to the filter rule on the table.

`filterclause_tn`

> The filter clause to be applied to the table in the tables parameter list at the position indicated by ordinal_tn.

`ordinal_vn`

> **For SMR only:** The ordinal number (that is, the position in the list counting from left to right starting with 1) of a view in the views parameter list to which an attribute is to be applied.

`filtername_vn`

> The filter name to be assigned to the filter rule on the view.

`filterclause_vn`

> **For SMR only:** The filter clause to be applied to the view in the views parameter list at the position indicated by ordinal_vn.

`-conflictresolution`

> **For MMR only:** For the conflict resolution option, specify E for earliest timestamp conflict resolution, L for latest timestamp conflict resolution, N for node priority conflict resolution, M for manual conflict resolution, or C for custom conflict handling. The specified conflict resolution applies to the table in the position given by ordinal_tn counting from left to right in the tables parameter list. If omitted the default is E.

`-standbyconflictresolution`

> **For MMR only:** For the standby conflict resolution option, specify E for earliest timestamp conflict resolution, L for latest timestamp conflict resolution, N for node priority conflict resolution, M for manual conflict resolution, or C for custom conflict handling. The specified conflict resolution applies to the table in the position given by ordinal_tn counting from left to right in the tables parameter list. If omitted the default is M.

`customhandler_tn`

> **For MMR only:** For the conflict resolution option or the standby conflict resolution option, specify customhandler_tn as the function name with an optional schema prefix (that is, formatted as schema.function_name) as given in the CREATE FUNCTION command for the custom conflict handling function created for the table in the tables parameter list at the position indicated by ordinal_tn. The custom conflict handling function must be added to the primary definition node. See [Adding a Custom Conflict Handling Function](../../06_mmr_operation/06_conflict_resolution/08_custom_conflict_handling/02_adding_custom_conflict_handling_function/#adding_custom_conflict_handling_function) for an example of adding the custom conflict handling function using PSQL. The custom handler name option must be specified if and only if the conflict resolution option or the standby conflict resolution option is set for custom conflict handling with the C value.

`-repgrouptype`

> Specify s if this command applies to a single-master replication system. Specify m if this command applies to a multi-master replication system. Note: This parameter is not required and may be completely omitted. It is present to provide support for its usage in previous xDB Replication Server CLI versions.

Examples

In the following example, table `edb.jobhist` and view `edb.salesemp` are added to an existing publication named analysts_managers.

```text
$ java -jar edb-repcli.jar -addtablesintopub analysts_managers \
>   -repsvrfile ~/pubsvrfile.prop \
>   -tables edb.jobhist \
>   -views edb.salesemp
Adding tables to publication analysts_managers ...

Tables:[[edb.jobhist, TABLE], [edb.salesemp, VIEW]]
Filter clause:[null, null]
Publication updated successfully
```
