product_docs/docs/eprs/7.0/08_xdb_cli/03_xdb_cli_commands/18_adding_tables_to_publication.mdx
---
title: "Adding Tables to a Publication (addtablesintopub)"
---

<div id="adding_tables_to_publication" class="registered_link"></div>

The `addtablesintopub` command adds tables or views into an existing publication.

Synopsis

```text
-addtablesintopub pubname 
-repsvrfile pubsvrfile 
[ { -tables schema_t1.table_1 [schema_t2.table_2] ... | -alltables 
    [ schema1 [ schema2 ] ... ] } ]
[ { -views schema_v1.view_1 [ schema_v2.view_2 ] ... | -allviews 
    [ schema_v1 [ schema_v2 ] ... ] } ]
[ -tablesfilterclause 
    "schema_t1.table_1:filtername_t1:filterclause_t1" 
  [ "schema_t2.table_2:filtername_t2:filterclause_t2" ] ...] 
[ -viewsfilterclause 
    "schema_v1.view_1:filtername_v1:filterclause_v1" 
  [ "schema_v2.view_2:filtername_v2:filterclause_v2" ] ...] 
[ -enablefilters 
  {filtername_1:{subscription_1,subscription_2,... |*}    
  [ filtername_2:{subscription_3,subscription_4,... |*} ]... |   
  filtername_1:{dbid_1,dbid_2,... |*} 
  [ filtername_2:{dbid_3,dbid_4,... |*} ]...} ] 
[-defaultconflictresolution {E|L|N|M}]
[-defaultstandbyconflictresolution {E|L|N|M}]
[ -conflictresolution 
    schema_t1.table_1:{ E | L | N | M | C:customhandler_t1 } 
  [ schema_t2.table_2:{ E | L } N | M | C:customhandler_t2 } ] ...] 
[ -standbyconflictresolution 
    schema_t1.table_1:{ E | L | N | M | C:customhandler_t1 } 
  [ schema_t2.table_2:{ E | L } N | M | C:customhandler_t2 } ] ...] 
[ -replicatetableschema {true|false} ]
[ -initialsnapshot [ {true|false} ] ]
```

The `addtablesintopub` command updates an existing publication identified by pubname. The views parameter is applicable only for a snapshot-only publication and is ignored if the publication is not defined as snapshot-only. See [Adding Tables to a Publication](../../07_common_operations/06_managing_publication/03_updating_pub/#add_tables_to_pub) for additional information on adding tables to a publication.

!!! Note
    The schema names, table names, and view names that you supply as values for the tables and views parameters are case-sensitive. Unless quoted identifiers were used to build the database objects, Oracle names must be entered using uppercase letters (for example, `EDB.DEPT`), and Advanced Server names must be entered in lowercase letters (for example `edb.dept`). See [Quoted Identifiers and Default Case Translation](../../10_appendix/04_miscellaneous_xdb_processing_topics/05_quoted_identifiers/#quoted_identifiers) for additional information on quoted identifiers and case translation.

Parameters

`pubname`

> The name of the publication to which tables or views are to be added.

`pubsvrfile`

> The file containing the publication server login information.

`-tables` or `-alltables`

> These options are used to add tables into publication. If the replication type of the publication is `t` (transactional), then `-tables` or `-alltables` is a must, otherwise it is optional.

> The `-tables` option  adds tables from the tables list to the publication. The `-alltables` option allows to add all tables of the database or only tables from the listed schemas (optional) to the publication.

`-views or -allviews`

> **For SMR only:**   If the replication type of the publication is `s` (snapshot), then optional `-views` or `-allviews` can be used to include views into publication.
The `-views` option  adds views from the views list to the publication. The `-allviews` option allows to add all views of the database or only views from the listed schemas (optional) to the publication.

`schema_tn`

> The name of the schema containing the nth table of the tables parameter list. This value is case-sensitive.

`table_n`

> The name of the nth table in the tables parameter list. This value is case-sensitive.

`schema_vn`

> **For SMR only:** The name of the schema containing the `nth` view of the `views` parameter list or the name of the `nth` schema of the `allviews` parameter list . This value is case-sensitive.

`view_n`

> **For SMR only:** The name of the schema containing the `nth` view of the `views` parameter list. This value is case-sensitive. 


`filtername_tn`

> The filter name to be assigned to the filter rule on the table.

`filterclause_tn`

> The filter clause to be applied to the table in the tables parameter list at the position indicated by `schema_t1.table_tn`.

`filtername_vn`

> The filter name to be assigned to the filter rule on the view.

`filterclause_vn`

> **For SMR only:** The filter clause to be applied to the view in the views parameter list at the position indicated by `schema_v1.table_vn`.

`-enablefilters`

> Enables filters for the list of subscriptions (SMR only) or non-MDN database IDs (MMR only). Enabled filters will be applied during the snapshot operation of the tables added to the publication.

`filtername_n`

> The filter name to be enabled for the list of subscriptions/db IDs. Should be from the filter names specified with options `-tablesfilterclause` and `-viewsfilterclause`.


`subscription_m,subscription_n,...`

> **For SMR only:** Comma separated (no spaces allowed) list of the names of subscriptions for which filter `filtername_n` will be enabled.

`dbid_m,dbid_n,...`

> **For MMR only:** Comma separated (no spaces allowed) list of the database IDs for which filter `filtername_n` will be enabled.

`-defaultconflictresolution`

> **For MMR only:** Default conflict resolution (E, L, N, or M), if the `-conflictresolution` option is omitted. If `-defaultconflictresolution` option is omitted, then default is `E`.

`-defaultstandbyconflictresolution`

> **For MMR only:** Default standby conflict resolution (E, L, N, or M), if the `-defaultconflictresolution` option is omitted. If `-defaultstandbyconflictresolution`  option is omitted, then default is `M`.

`-conflictresolution`

> **For MMR only:** For the conflict resolution option, specify E for earliest timestamp conflict resolution, L for latest timestamp conflict resolution, N for node priority conflict resolution, M for manual conflict resolution, or C for custom conflict handling. The specified conflict resolution applies to the table in the position given by ordinal_tn counting from left to right in the tables parameter list. If omitted the default is E.

`-standbyconflictresolution`

> **For MMR only:** For the standby conflict resolution option, specify E for earliest timestamp conflict resolution, L for latest timestamp conflict resolution, N for node priority conflict resolution, M for manual conflict resolution, or C for custom conflict handling. The specified conflict resolution applies to the table in the position given by ordinal_tn counting from left to right in the tables parameter list. If omitted the default is M.

`customhandler_tn`

> **For MMR only:** For the conflict resolution option or the standby conflict resolution option, specify customhandler_tn as the function name with an optional schema prefix (that is, formatted as schema.function_name) as given in the CREATE FUNCTION command for the custom conflict handling function created for the table in the tables parameter list at the position indicated by ordinal_tn. The custom conflict handling function must be added to the primary definition node. See [Adding a Custom Conflict Handling Function](../../06_mmr_operation/06_conflict_resolution/08_custom_conflict_handling/02_adding_custom_conflict_handling_function/#adding_custom_conflict_handling_function) for an example of adding the custom conflict handling function using PSQL. The custom handler name option must be specified if and only if the conflict resolution option or the standby conflict resolution option is set for custom conflict handling with the C value.

`replicatetableschema`

> **For SMR only:** Applies to target subscriptions nodes. Set this option to `true` if you want the publication table definitions replicated from the publication database to all target subscription nodes when adding new tables to the publication. Set this option to false if you have already created the table definitions in the target subscription nodes. If omitted, the default is `true`.

> **For MMR only:** Applies to non-MDN nodes. Set this option to true if you want the publication table definitions replicated from the master definition node  (MDN) when adding new tables to the publication. Set this option to false if you have already created the table definitions in the non-MDN master node. If omitted, the default is `true`.

`-initialsnapshot`

> If the value is `true`, a snapshot replication of the new tables to target nodes will be performed. 

!!! Note
    The value of this option is not required, so if the option is present without value, the value is assumed to be `true`. If the option is omitted, then the default value is `false`.

**For MMR only:** Applies to non-MDN nodes. Specify this option if you want an initial snapshot replication of the new tables to be performed from the master definition node to every other master node when adding new tables to the publication. Omit this option, if you do not want an initial snapshot replication to be performed.

**For SMR only:** Applies to all target subscription nodes. Specify this option if you want an initial snapshot replication of the new tables to be performed from the publication node to all target subscription nodes when adding new tables to the publication. Omit this option, if you do not want an initial snapshot replication to be performed.. 

!!! Note
    Unless you intend to use the offline snapshot technique (see [Loading Tables From an External
    Data Source (Offline Snapshot)](../../07_common_operations/09_offline_snapshot/#offline_snapshot)), it is recommended that you specify this option. An initial snapshot replication of the new tables must be performed before performing synchronization replications on demand (see [Performing a Synchronization (dosynchronize)](42_perform_synchronization/#perform_synchronization)) or by a schedule (see [Configuring a Multi-Master Schedule (confschedulemmr)](44_configure_mmr_schedule/#configure_mmr_schedule)). If the newly added tables did not undergo an initial snapshot to all target nodes, any subsequent synchronization replication may fail to apply the transactions to that master node.


Examples

In the following example, table `edb.jobhist` and view `edb.salesemp` are added to an existing publication named analysts_managers.

```text
$ java -jar edb-repcli.jar -addtablesintopub analysts_managers \
>   -repsvrfile ~/pubsvrfile.prop \
>   -tables edb.jobhist \
>   -views edb.salesemp
Adding tables to publication analysts_managers ...

Tables:[[edb.jobhist, TABLE], [edb.salesemp, VIEW]]
Filter clause:[null, null]
Publication updated successfully
```
